--- a/src/sass/base/_customs.scss
+++ b/src/sass/base/_customs.scss
@@ -12,6 +12,30 @@ $clr-yellow: hsla(35, 78%, 62%, 1);
 $clr-line-grey: hsla(236, 13%, 42%, 1);
 $clr-silver: hsla(236, 8%, 79%, 1);
 
+@font-face {
+    font-family: "Inter-Regular";
+    src: url("./fonts/static/Inter-Regular.ttf");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Inter-Bold";
+    src: url("./fonts/static/Inter-Bold.ttf");
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: "Inter-ExtraBold";
+    src: url("./fonts/static/Inter-ExtraBold.ttf");
+    font-weight: bolder;
+}
+
+
+
+.font-family {
+    font-family: "Inter-Regular";
+}
+
 /* ------------------------------------*/
 /*        FONT SIZES                   */
 /*-------------------------------------*/
