--- a/src/sass/base/_customs.scss
+++ b/src/sass/base/_customs.scss
@@ -31,7 +31,6 @@ $clr-silver: hsla(236, 8%, 79%, 1);
 }
 
 
-
 .font-family {
     font-family: "Inter-Regular";
 }
@@ -53,6 +52,18 @@ $fs-32: utils.calculateRem(32);
 $fs-36: utils.calculateRem(36);
 $fs-40: utils.calculateRem(40);
 $fs-56: utils.calculateRem(56);
+
+/* ------------------------------------*/
+/*           SPACINGS                  */
+/*-------------------------------------*/
+
+$spacer1: 1rem;
+
+.flex {
+    display: flex;
+    justify-content: space-between;    
+    align-items: center;
+}
 
 /* screen reader only */
 .sr-only {
