--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -46,6 +46,7 @@ body {
     min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
+    overflow-x: hidden;
 }
 
 /* A elements that don't have a class get default styles */
