main navigation - mobile presentation

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,8 +1,11 @@
 .close-img {
     display: none;
 }
+
 .btn-menu-control {
     align-items: center;
     background-color: transparent;
     border: none;
+    z-index: 1;
+    position: relative;
 }
