--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,3 +1,5 @@
+@use "../utils";
+
 .close-img {
     display: none;
 }
@@ -8,4 +10,8 @@
     border: none;
     z-index: 1;
     position: relative;
+
+    @include utils.mQ(45rem) {
+        display: none; 
+    }
 }
