add class to body using , useEffect (on condition)

--- a/src/sass/layouts/_page.scss
+++ b/src/sass/layouts/_page.scss
@@ -11,6 +11,13 @@
     overflow-x: hidden;
 }
 
+.overflow-y {
+    overflow-y: hidden;
+    @include utils.mQ(45rem) {
+       overflow-y: auto;
+    }
+}
+
 .overlay {
     position: absolute;
     top: 0;
