font fix: not displaying on deployment

--- a/src/sass/base/_customs.scss
+++ b/src/sass/base/_customs.scss
@@ -14,19 +14,19 @@ $clr-silver: hsla(236, 8%, 79%, 1);
 
 @font-face {
     font-family: "Inter-Regular";
-    src: url("./fonts/static/Inter-Regular.ttf");
+    src: url("../fonts/static/Inter-Regular.ttf");
     font-weight: normal;
 }
 
 @font-face {
     font-family: "Inter-Bold";
-    src: url("./fonts/static/Inter-Bold.ttf");
+    src: url("../fonts/static/Inter-Bold.ttf");
     font-weight: bold;
 }
 
 @font-face {
     font-family: "Inter-ExtraBold";
-    src: url("./fonts/static/Inter-ExtraBold.ttf");
+    src: url("../fonts/static/Inter-ExtraBold.ttf");
     font-weight: bolder;
 }
 
