--- a/src/sass/layouts/_page.scss
+++ b/src/sass/layouts/_page.scss
@@ -13,11 +13,25 @@
 
 .overflow-y {
     overflow-y: hidden;
+    position: relative;
+    &::before {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        content: "";
+        opacity: 0.5;
+        background: base.$clr-dark-space-blue;       
+    }
     @include utils.mQ(45rem) {
        overflow-y: auto;
+       &::before {
+        width: 0;
+        height: 0;
+        opacity: 0;
+       }
     }
 }
-
+/*
 .overlay {
     position: absolute;
     top: 0;
@@ -37,4 +51,4 @@
     @include utils.mQ(45rem) {
        opacity: 0;
     }
-}
+} */
