initial styles for hero component

--- a/src/sass/layouts/_article.scss
+++ b/src/sass/layouts/_article.scss
@@ -3,4 +3,5 @@
 .new-articles {
     background-color: base.$clr-dark-space-blue;
     color: base.$clr-almost-white;
+    padding: base.$spacer1;
 }
