--- a/src/sass/base/_customs.scss
+++ b/src/sass/base/_customs.scss
@@ -11,7 +11,7 @@ $clr-light-vermillion: hsla(5, 85%, 63%, 1);
 $clr-yellow: hsla(35, 78%, 62%, 1);
 $clr-line-grey: hsla(236, 13%, 42%, 1);
 $clr-silver: hsla(236, 8%, 79%, 1);
-
+/*
 @font-face {
     font-family: "Inter-Regular";
     src: url("../fonts/static/Inter-Regular.ttf");
@@ -29,10 +29,9 @@ $clr-silver: hsla(236, 8%, 79%, 1);
     src: url("../fonts/static/Inter-ExtraBold.ttf");
     font-weight: bolder;
 }
-
-
+*/
 .font-family {
-    font-family: "Inter-Regular";
+    font-family: 'Inter', sans-serif;
 }
 
 /* ------------------------------------*/
@@ -52,6 +51,9 @@ $fs-32: utils.calculateRem(32);
 $fs-36: utils.calculateRem(36);
 $fs-40: utils.calculateRem(40);
 $fs-56: utils.calculateRem(56);
+
+$line-height-1: 1;
+$line-height-2: 1.7;
 
 /* ------------------------------------*/
 /*           SPACINGS                  */
