--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -20,6 +20,12 @@
 .btn-link {
     background-color: base.$clr-light-vermillion;
     color: base.$clr-almost-white;
+    font-size: base.$fs-14;
+    font-weight: 700;
+    line-height: base.$line-height-2;
     text-decoration: none;
-    padding: .5rem 1rem;
+    text-transform: uppercase;
+    padding: .75rem 1.9rem;
+    letter-spacing: 4.375px;
+    display: inline-block;
 }
