Header component created - standalone

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -28,4 +28,10 @@
     padding: .75rem 1.9rem;
     letter-spacing: 4.375px;
     display: inline-block;
+
+    @include utils.mQ(45rem) {
+        grid-area: 2/2;
+        text-align: center;
+        max-width: 12.5rem;
+    }
 }
