--- a/src/sass/layouts/_nav.scss
+++ b/src/sass/layouts/_nav.scss
@@ -3,6 +3,8 @@
 
 .nav {
     position: relative;
+
+  
 }
 
 .main-nav {
@@ -17,13 +19,13 @@
     align-items: flex-start;
     gap: 1rem;
     padding-inline-start: 1.5rem;
-  
+
     @include utils.mQ(45rem) {
         width: 100%;
         position: relative;
         height: auto;
-        flex-direction: row;    
-        right: 0;   
+        flex-direction: row;
+        right: 0;
     }
 }
 
@@ -32,9 +34,10 @@
     transition: all 0.5s ease-out;
     top: -(base.$spacer1 * 2);
     background-color: base.$clr-almost-white;
-    @include utils.mQ(45rem) {       
-       top: 0; 
-       right: 0; 
+
+    @include utils.mQ(45rem) {
+        top: 0;
+        right: 0;
     }
 }
 
@@ -43,4 +46,7 @@
     font-size: base.$fs-18;
     text-decoration: none;
     font-weight: 400;
+    @include utils.mQ(45rem) {
+        font-size: base.$fs-15;
+    }
 }
