--- a/src/sass/layouts/_page.scss
+++ b/src/sass/layouts/_page.scss
@@ -2,6 +2,10 @@
 @use "../base";
 @use "../utils";
 
+body {
+    background-color: base.$clr-almost-white;
+}
+
 .app {
     padding-inline: base.$spacer1;
     margin-block: base.$spacer1 * math.div(28, 16);
@@ -9,7 +13,10 @@
 
     @include utils.mQ(45rem) {
         margin-inline: auto;
+    }
 
+    @include utils.mQ(63rem) {
+        margin-block-start: 5rem;
     }
 }
 
@@ -52,6 +59,10 @@
     font-size: base.$fs-40;
     font-weight: 800;
     line-height: 1;
+
+    @include utils.mQ(45rem) {
+        font-size: base.$fs-56;
+    }
 }
 
 .main-text {
@@ -61,8 +72,21 @@
     line-height: base.$line-height-3;
 }
 
+.hero {
+    @include utils.mQ(63rem) {
+        flex: 1 1 67%;
+    }
+}
+
 .hero-content {
     margin-block: base.$spacer1 * 2;
+
+    @include utils.mQ(63rem) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: base.$spacer1 * 3;
+        margin-block-end: 0;
+    }
 }
 
 /*
