--- a/src/sass/layouts/_aside.scss
+++ b/src/sass/layouts/_aside.scss
@@ -3,8 +3,9 @@
 
 .aside {
     margin-block: 2rem;
+
     @include utils.mQ(63rem) {
-       margin-block: 5rem;
+        margin-block: 5rem;
     }
 }
 
@@ -16,12 +17,18 @@
 
 .aside-item {
     display: flex;
-    flex-direction: row;   
+    flex-direction: row;
     gap: 1rem;
 }
 
-.aside-img {
+.aside-img-container {
     flex: 1 1 25%;
+}
+
+.aside-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .aside-content {
@@ -38,6 +45,10 @@
 .aside-item-title {
     font-size: base.$fs-18;
     font-weight: 800;
+
+    @include utils.mQ(63rem) {
+        margin-block: 0.75rem;
+    }
 }
 
 .aside-item-link {
