--- a/src/sass/layouts/_page.scss
+++ b/src/sass/layouts/_page.scss
@@ -63,6 +63,10 @@ body {
     @include utils.mQ(45rem) {
         font-size: base.$fs-56;
     }
+
+    @include utils.mQ(63rem) {
+        grid-area: 1/1/3/2;
+    }
 }
 
 .main-text {
@@ -75,6 +79,9 @@ body {
 .hero {
     @include utils.mQ(63rem) {
         flex: 1 1 67%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 }
 
