--- a/src/sass/layouts/_aside.scss
+++ b/src/sass/layouts/_aside.scss
@@ -55,6 +55,13 @@
     text-decoration: none;
     color: base.$clr-dark-space-blue;
     line-height: 1.3;
+
+    &:hover,
+    &:focus {
+        color: base.$clr-light-vermillion;
+        outline: dashed currentColor;
+        outline-offset: .35em;
+    }
 }
 
 .aside-content-text {
