feat: active state mixin

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -12,12 +12,13 @@
     z-index: 1;
     position: relative;
 
-    &:hover,
-    &:focus {
-        color: base.$clr-light-vermillion;
-        outline: dashed currentColor;
-        outline-offset: .35em;
-    }
+    @include utils.btnActive(base.$clr-light-vermillion, inherit);
+    // &:hover,
+    //&:focus {
+    //   color: base.$clr-light-vermillion;
+    // outline: dashed currentColor;
+    // outline-offset: .35em;
+    // }
 
     @include utils.mQ(45rem) {
         display: none;
@@ -25,12 +26,7 @@
 }
 
 .btn-logo {
-    &:hover,
-    &:focus {
-        color: base.$clr-light-vermillion;
-        outline: dashed currentColor;
-        outline-offset: .35em;
-    }
+    @include utils.btnActive(base.$clr-light-vermillion, inherit);
 }
 
 .btn-link {
@@ -45,11 +41,11 @@
     letter-spacing: 4.375px;
     display: inline-block;
 
+    @include utils.btnActive(base.$clr-almost-white, base.$clr-dark-space-blue);
+
     &:hover,
     &:focus {
-        background-color: base.$clr-dark-space-blue;
         outline: dashed base.$clr-dark-space-blue;
-        outline-offset: .35em;
     }
 
     @include utils.mQ(45rem) {
